--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext{
+        supportLibraryVersion = '28.0.0'
+        rxjavaVersion = '2.1.3'
+        rxandroidVersion = '2.0.1'
+        lifecycleVersion = '1.1.0'
+    }
+
     ext.kotlin_version = '1.3.21'
     repositories {
         google()
