--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DictionaryActivity"></activity>
+        <activity android:name=".voiceToText.VoiceToTextActivity"></activity>
+        <activity android:name=".DictionaryActivity" />
         <activity android:name=".SearchResultActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
